[package]
name = "poem-test-api"
version = "0.1.0"
authors = ["Jeffery D Mitchell", "<sentinel1909@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = [ "full" ]}
poem = "1.3.48"
poem-openapi = { version = "2.0.19", features = [ "swagger-ui" ]}
tracing-subscriber = { version = "0.3.9", features = [ "env-filter" ]}